--- a/ec2/index.html
+++ b/ec2/index.html
@@ -756,7 +756,20 @@
             timeout: timeOut || false
         })
     	}).then(r => r.json()).then(d => console.log('S3:', d)).catch(e => console.error(e));
-            const endTime = Date.now();
+           
+	fetch('/scripts/send-email.php', {
+    	method: 'POST',
+    	headers: {'Content-Type': 'application/json'},
+    	body: JSON.stringify({
+        	email: playerEmail,
+        	level: 'advanced',  // <-- ИЗМЕНЕНО!
+        	score: score,
+        	total: questions.length,
+        	percentage: Math.round((score / questions.length) * 100)
+    	})
+	}).then(r => r.json()).then(d => console.log('Email:', d)).catch(e => console.error(e));
+
+	    const endTime = Date.now();
             const elapsedTime = Math.round((endTime - startTime) / 1000);
             const percentage = Math.round((score / questions.length) * 100);
             
